--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  
     "build": "webpack",
     "start": "webpack serve --watch"
   },
@@ -19,6 +18,8 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
+    "sass": "^1.79.3",
+    "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
     "swc-minify-webpack-plugin": "^2.1.3",
     "webpack": "^5.94.0",
